# AERV_Control

./: README.md  frames_2025-04-25_18.49.10.gv  frames_2025-06-02_11.24.05.gv  map_1745362195.yaml  map_1745362267.yaml
src/aerv_control/: CMakeLists.txt  package.xml
src/aerv_control/config/: amcl_localization.yaml  ekf_cmd_global.yaml  ekf_cmd_local.yaml  ekf_encoder_global.yaml  ekf_encoder_local.yaml  gz_bridge.yaml  gz_ros2_control.yaml  navigation.yaml  navsat.yaml  parameters.yaml  slam_toolbox_mapping.yaml
src/aerv_control/include/: vehicle_controller.hpp
src/aerv_control/launch/: vehicle_mapping.launch.py  vehicle_sim.launch.py  vehicle_slam.launch.py  vehicle_viz.launch.py  world.launch.py
src/aerv_control/maps/: depot.yaml  map.pgm  map.yaml  map_ser.data  maps.pgm  maps.yaml  road.data  road.pgm  road2.data  road4.data  road5.data  road7.data  test.pgm  test.yaml
src/aerv_control/meshes/: cover.STL  pin_fl_link.STL  pin_fr_link.STL  wheel_fl_link.STL  wheel_fr_link.STL  wheel_rl_link.STL  wheel_rr_link.STL
src/aerv_control/rviz/: vehicle_map.rviz  vehicle_slam.rviz  vehicle_slam2.rviz
src/aerv_control/src/: imu_filter_node copy.cpp  imu_filter_node.cpp  laser_to_range_node.cpp  mode_switch.cpp  mqtt_app.cpp  mqtt_bridge_node.cpp  smooth_teleop.py  vehicle_controller.cpp
src/aerv_control/urdf/: common.xacro
src/aerv_control/urdf/control/: mec_mobile.gazebo
src/aerv_control/urdf/mech/: front_wheels.xacro  rear_wheels.xacro  steering_pins.xacro  vehicle_base.xacro  vehicle_cover.xacro
src/aerv_control/urdf/robots/: vehicle_aerv12.xacro  vehicle_aerv13.xacro
src/aerv_control/urdf/sensors/: camera.xacro  gps.xacro  imu.xacro  lidar.xacro  ultrasonic.xacro
src/aerv_control/worlds/: car.sdf  empty.sdf  lane.sdf  road.sdf  sonoma.sdf  test.sdf  warehouse.sdf  warehouse2.sdf  world.sdf  world2.sdf
src/aerv_interfaces/: CMakeLists.txt  package.xml
src/lidar/: CMakeLists.txt  package.xml
src/lidar/launch/: lidar_launch.py
src/lidar/src/: lidar_node.cpp
src/vehicle_control/: CMakeLists.txt  package.xml
src/vehicle_control/config/: gz_bridge.yaml
src/vehicle_control/launch/: vehicle_mapping.launch.py  vehicle_sim.launch.py  vehicle_slam.launch.py  vehicle_viz.launch.py  world.launch.py
src/vehicle_control/rviz/: vehicle_sim.rviz  vehicle_slam.rviz
src/vehicle_control/urdf/mech/: mecanum_wheel.urdf.xacro  robot_3d_base.urdf.xacro
src/vehicle_control/urdf/robots/: robot_3d.urdf.xacro
src/vehicle_control/urdf/sensors/: lidar.urdf.xacro  rgbd_camera.urdf.xacro
src/vehicle_control/worlds/: warehouse.sdf  world.sdf
